2009-04-24  Hans Boehm <Hans.Boehm@hp.com>
	* doc/gcdescr.html: Improve description of object freelist
	structure.
	* include/private/gc_priv.h: Fix comment for _size_map.

2009-03-16  Hans Boehm <Hans.Boehm@hp.com>
	* os_dep.c (GC_linux_stack_base): Relax sanity test.

2009-03-11  Hans Boehm <Hans.Boehm@hp.com>  (Really Ivan Maidanski)
	* include/private/gc_pmark.h (PUSH_CONTENTS_HDR for
	MARK_BIT_PER_OBJ): Add missing backslash before eoln.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com>
	* misc.c (GC_set_warn_proc): Implicitly intialize GC on
	non-Cygwin win32.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Really Petr Krajca)
	* configure.ac: Enable thread-local allocation for sparc-linux.
	* configure: Regenerate.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* alloc.c (GC_try_to_collect): Remove duplicate initialization
	check.
	* malloc.c (GC_generic_malloc): Remove lw to eliminate single-
	threaded warnings.
	* mallocx.c (GC_generic_malloc_ignore_off_page): Ditto.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (Mostly Ivan Maidansky)
	* allchblk.c, backgraph.c, dbg_mlc.c, dyn_load.c,
	finalize.c, include/private/gc_pmark.h, malloc.c, mark.c,
	os_dep.c, pthread_stop_world.c, pthread_support.c, reclaim.c,
	thread_local_alloc.c.
	* misc.c: Refine comment.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com>
	* os_dep.c: Define GC_GWW_BUF_LEN more intelligently.  Add FIXME
	comment.

2009-02-28  Hans Boehm <Hans.Boehm@hp.com> (With input from Ivan Maidansky)
	* win32_threads.c (GC_push_stack_for): Yet another attempt
	at the stack_min finding logic.  Try to clean up the existing code
	while minimizing VirtualQuery calls.
	(GC_win32_start_inner): Register thread before GC_printf.
	Produce more output with DEBUG_THREADS.
	*include/gc.h: Update obsolete comments.

2009-02-24  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* tests/test.c:
	(gcj_class_struct2): Use cast instead of l suffix.
	Cast GetLastError to int in various places.